<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cstr_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/group_2"
        tools:context=".screens.auth.ui.SendPhoneActivity">

        <TextView
            android:id="@+id/tv_info_send_phone"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/proxima_nova_semibold"
            android:text="@string/error_number_phone"
            android:textAlignment="center"
            android:textColor="#61ffffff"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_enter_phone" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="127dp"
            android:fontFamily="@font/proxima_nova_semibold"
            android:text="@string/auth"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/et_enter_phone"
            app:layout_constraintStart_toStartOf="@+id/et_enter_phone"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/proxima_nova_semibold"
            android:foreground="?selectableItemBackground"
            android:text="@string/next"
            android:textColor="#73ffffff"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_enter_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rectangle_bacground_edit_text"
            android:ems="10"
            android:hint="@string/enter_number_phone"
            android:inputType="phone"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="+7 ("
            android:textAlignment="center"
            android:textColor="@color/white"
            android:theme="@style/EditTextWhiteTranparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/myProgressBar"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/bt_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_info_send_phone" />

    </android.support.constraint.ConstraintLayout>
</layout>