<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cstr_sms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/group_2">

        <TextView
            android:id="@+id/tv_clock2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="0000"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_info_send_sms" />

        <TextView
            android:id="@+id/tv_info_send_sms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/proxima_nova_semibold"
            android:text="@string/repeated_request"
            android:textAlignment="center"
            android:textColor="#61ffffff"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_sms" />

        <EditText
            android:id="@+id/tv_enter_sms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rectangle_bacground_edit_text"
            android:ems="10"
            android:hint="@string/enter_sms_password"
            android:inputType="phone"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:theme="@style/EditTextWhiteTranparent"
            android:visibility="visible"
            android:maxLength="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_send_sms" />

        <Button
            android:id="@+id/bt_next2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/proxima_nova_semibold"
            android:foreground="?selectableItemBackground"
            android:text="@string/next"
            android:textColor="#72ffffff"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_title_send_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="127dp"
            android:fontFamily="@font/proxima_nova_semibold"
            android:text="АВТОРИЗАЦИЯ"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>